--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
   --darkMint: #2a997f;
   --fontSize30: 30px;
   --fontSize24: 24px;
+  --fontSize12: 12px;
   --fontSize16: 16px;
   --fontSize28: 28px;
   --fontSize20: 20px;
